--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@ span {
   font-weight: inherit;
 }
 
-.blueShadow {
-  box-shadow: 3px 3px 0 0 #60a5fa;
+.blackShadow {
+  box-shadow: 3px 3px 0 0 black;
 }
 
-.blueShadow:hover {
+.blackShadow:hover {
   transform: translate(-3px, -3px);
-  box-shadow: 6px 6px 0 0 #60a5fa;
+  box-shadow: 6px 6px 0 0 black;
 }
